--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 ## All listings in Alphabetical order
 
-[K] Krishanu Kashyap <riankashyap@gmail.com>
+KRISHANU KASHYAP <riankashyap@gmail.com>
+VIKASH KUMAR <vik.cyber003@gmail.com>
