--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 ## All listings in Alphabetical order
 
 KRISHANU KASHYAP <riankashyap@gmail.com>
-VIKASH KUMAR <vik.cyber003@gmail.com>
+VIKAS KUMAR <vik.cyber003@gmail.com>
